@@ -32,7 +32,7 @@ public class EntityComparator implements Comparator<XModelObject> {
     public EntityComparator(XChild[] c) {
         entities = new Hashtable<String,Integer>(c.length);
         for (int i = 0; i < c.length; i++) {
-            entities.put(c[i].getName(), new Integer(i * 100));
+            entities.put(c[i].getName(), Integer.valueOf(i * 100));
         }
     }
     
